--- a/style.css
+++ b/style.css
@@ -22,6 +22,14 @@ a{
     color: aqua;
 }
 ol {
+    padding-left:33px;
     border-right: 1px solid gray;
     width: 200px;
+}
+#grid{
+    display: grid;
+    grid-template-columns: 150px 1fr;   
+}
+#article{
+    padding-left: 100px;
 }
